save model to wandb

--- a/notebooks/decoder.ipynb
+++ b/notebooks/decoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,40 +27,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load libraries\n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments, AutoConfig\n",
-    "import torch\n",
-    "\n",
-    "model_name = 'gpt2'\n",
-    "epochs = 3\n",
-    "num_labels = 4\n",
-    "batch_size = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b3ce337be3346bcbfd77773ac97941d",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
       "text/plain": [
-       "Map:   0%|          | 0/7600 [00:00<?, ? examples/s]"
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_205358-d62nfy11</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/gpt2/runs/d62nfy11' target=\"_blank\">expert-paper-13</a></strong> to <a href='https://wandb.ai/kpierzynski/gpt2' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/gpt2' target=\"_blank\">https://wandb.ai/kpierzynski/gpt2</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/gpt2/runs/d62nfy11' target=\"_blank\">https://wandb.ai/kpierzynski/gpt2/runs/d62nfy11</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "# Load libraries\n",
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, Trainer, TrainingArguments, AutoConfig\n",
+    "import torch\n",
+    "import wandb\n",
+    "\n",
+    "model_name = 'gpt2'\n",
+    "epochs = 3\n",
+    "num_labels = 4\n",
+    "batch_size = 32\n",
+    "\n",
+    "run = wandb.init(project=model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Define tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, model_max_length=256)\n",
@@ -81,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +205,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Freeze odd layers\n",
+    "\n",
+    "i = 0\n",
+    "for param in model.parameters():\n",
+    "    if i % 2 == 0:\n",
+    "        continue\n",
+    "    param.requires_grad = False\n",
+    "    i += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +229,9 @@
     "    output_dir='./results',\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
-    "    evaluation_strategy=\"epoch\"\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    save_strategy=\"epoch\",\n",
+    "    report_to=\"wandb\"\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -171,76 +245,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_024805-gl4r92xu</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu' target=\"_blank\">jumping-moon-4</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/gl4r92xu</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -248,7 +255,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [471/471 02:53, Epoch 3/3]\n",
+       "      [471/471 02:59, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -263,20 +270,20 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.299594</td>\n",
-       "      <td>0.910000</td>\n",
+       "      <td>0.334680</td>\n",
+       "      <td>0.886000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.280762</td>\n",
-       "      <td>0.916000</td>\n",
+       "      <td>0.289173</td>\n",
+       "      <td>0.910000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.280154</td>\n",
-       "      <td>0.915000</td>\n",
+       "      <td>0.301305</td>\n",
+       "      <td>0.911000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -291,10 +298,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=471, training_loss=0.2876964010250796, metrics={'train_runtime': 176.7944, 'train_samples_per_second': 84.844, 'train_steps_per_second': 2.664, 'total_flos': 1971881994240000.0, 'train_loss': 0.2876964010250796, 'epoch': 3.0})"
+       "TrainOutput(global_step=471, training_loss=0.40511615210531116, metrics={'train_runtime': 179.7601, 'train_samples_per_second': 83.445, 'train_steps_per_second': 2.62, 'total_flos': 1971881994240000.0, 'train_loss': 0.40511615210531116, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -350,6 +357,81 @@
    ],
    "source": [
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Symlinked 3 files into the W&B run directory, call wandb.save again to sync new files.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='2.665 MB of 476.743 MB uploaded\\r'), FloatProgress(value=0.005591002636754955, max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>▁██</td></tr><tr><td>eval/loss</td><td>█▁▃</td></tr><tr><td>eval/runtime</td><td>▁█▃</td></tr><tr><td>eval/samples_per_second</td><td>█▁▆</td></tr><tr><td>eval/steps_per_second</td><td>█▁▆</td></tr><tr><td>train/epoch</td><td>▁▅██</td></tr><tr><td>train/global_step</td><td>▁▄██</td></tr><tr><td>train/total_flos</td><td>▁</td></tr><tr><td>train/train_loss</td><td>▁</td></tr><tr><td>train/train_runtime</td><td>▁</td></tr><tr><td>train/train_samples_per_second</td><td>▁</td></tr><tr><td>train/train_steps_per_second</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>0.911</td></tr><tr><td>eval/loss</td><td>0.30131</td></tr><tr><td>eval/runtime</td><td>4.1105</td></tr><tr><td>eval/samples_per_second</td><td>243.28</td></tr><tr><td>eval/steps_per_second</td><td>30.41</td></tr><tr><td>train/epoch</td><td>3.0</td></tr><tr><td>train/global_step</td><td>471</td></tr><tr><td>train/total_flos</td><td>1971881994240000.0</td></tr><tr><td>train/train_loss</td><td>0.40512</td></tr><tr><td>train/train_runtime</td><td>179.7601</td></tr><tr><td>train/train_samples_per_second</td><td>83.445</td></tr><tr><td>train/train_steps_per_second</td><td>2.62</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">expert-paper-13</strong> at: <a href='https://wandb.ai/kpierzynski/gpt2/runs/d62nfy11' target=\"_blank\">https://wandb.ai/kpierzynski/gpt2/runs/d62nfy11</a><br/> View job at <a href='https://wandb.ai/kpierzynski/gpt2/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQzOTA2MQ==/version_details/v5' target=\"_blank\">https://wandb.ai/kpierzynski/gpt2/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQzOTA2MQ==/version_details/v5</a><br/>Synced 6 W&B file(s), 0 media file(s), 0 artifact file(s) and 3 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20240124_205358-d62nfy11/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "trainer.save_model(model_name + \"_model\")\n",
+    "\n",
+    "run.save(f\"{model_name}_model/*\")\n",
+    "wandb.finish()"
    ]
   }
  ],
