--- a/notebooks/encoder-decoder.ipynb
+++ b/notebooks/encoder-decoder.ipynb
@@ -29,37 +29,93 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Loading libraries\n",
-    "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
-    "\n",
-    "model_name = 't5-large'\n",
-    "num_labels = 4\n",
-    "epochs = 3\n",
-    "batch_size = 32"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49b8d77abdf9439cb664d27b41d91cfa",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
       "text/plain": [
-       "Map:   0%|          | 0/7600 [00:00<?, ? examples/s]"
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_212147-pr8if78g</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/t5-large/runs/pr8if78g' target=\"_blank\">genial-flower-2</a></strong> to <a href='https://wandb.ai/kpierzynski/t5-large' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/t5-large' target=\"_blank\">https://wandb.ai/kpierzynski/t5-large</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/t5-large/runs/pr8if78g' target=\"_blank\">https://wandb.ai/kpierzynski/t5-large/runs/pr8if78g</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
     }
    ],
+   "source": [
+    "# Loading libraries\n",
+    "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
+    "import wandb\n",
+    "\n",
+    "model_name = 't5-large'\n",
+    "num_labels = 4\n",
+    "epochs = 3\n",
+    "batch_size = 32\n",
+    "\n",
+    "run = wandb.init(project=model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Create tokenizer\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name, model_max_length=128)\n",
@@ -149,7 +205,8 @@
     "    output_dir='./results',\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
-    "    evaluation_strategy='epoch'\n",
+    "    evaluation_strategy='epoch',\n",
+    "    report_to=\"wandb\"\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -167,80 +224,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_025530-1uh1uyv4</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4' target=\"_blank\">frosty-pond-6</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/1uh1uyv4</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
        "      <progress value='471' max='471' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [471/471 07:28, Epoch 3/3]\n",
+       "      [471/471 07:36, Epoch 3/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -255,20 +245,20 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.357388</td>\n",
-       "      <td>0.902000</td>\n",
+       "      <td>0.346673</td>\n",
+       "      <td>0.898000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.314651</td>\n",
-       "      <td>0.909000</td>\n",
+       "      <td>0.311081</td>\n",
+       "      <td>0.907000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.306663</td>\n",
-       "      <td>0.907000</td>\n",
+       "      <td>0.303432</td>\n",
+       "      <td>0.914000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -283,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=471, training_loss=0.3972011493269805, metrics={'train_runtime': 452.6575, 'train_samples_per_second': 33.138, 'train_steps_per_second': 1.041, 'total_flos': 8131065984000000.0, 'train_loss': 0.3972011493269805, 'epoch': 3.0})"
+       "TrainOutput(global_step=471, training_loss=0.39904755999328223, metrics={'train_runtime': 457.4747, 'train_samples_per_second': 32.789, 'train_steps_per_second': 1.03, 'total_flos': 8131065984000000.0, 'train_loss': 0.39904755999328223, 'epoch': 3.0})"
       ]
      },
      "execution_count": 9,
@@ -451,6 +441,81 @@
    ],
    "source": [
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Symlinked 3 files into the W&B run directory, call wandb.save again to sync new files.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.008 MB of 0.010 MB uploaded\\r'), FloatProgress(value=0.8293801854563202, max=1.0…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>▁▅█</td></tr><tr><td>eval/loss</td><td>█▂▁</td></tr><tr><td>eval/runtime</td><td>█▁▃</td></tr><tr><td>eval/samples_per_second</td><td>▁█▆</td></tr><tr><td>eval/steps_per_second</td><td>▁█▆</td></tr><tr><td>train/epoch</td><td>▁▅██</td></tr><tr><td>train/global_step</td><td>▁▄██</td></tr><tr><td>train/total_flos</td><td>▁</td></tr><tr><td>train/train_loss</td><td>▁</td></tr><tr><td>train/train_runtime</td><td>▁</td></tr><tr><td>train/train_samples_per_second</td><td>▁</td></tr><tr><td>train/train_steps_per_second</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>0.914</td></tr><tr><td>eval/loss</td><td>0.30343</td></tr><tr><td>eval/runtime</td><td>13.7348</td></tr><tr><td>eval/samples_per_second</td><td>72.808</td></tr><tr><td>eval/steps_per_second</td><td>9.101</td></tr><tr><td>train/epoch</td><td>3.0</td></tr><tr><td>train/global_step</td><td>471</td></tr><tr><td>train/total_flos</td><td>8131065984000000.0</td></tr><tr><td>train/train_loss</td><td>0.39905</td></tr><tr><td>train/train_runtime</td><td>457.4747</td></tr><tr><td>train/train_samples_per_second</td><td>32.789</td></tr><tr><td>train/train_steps_per_second</td><td>1.03</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">genial-flower-2</strong> at: <a href='https://wandb.ai/kpierzynski/t5-large/runs/pr8if78g' target=\"_blank\">https://wandb.ai/kpierzynski/t5-large/runs/pr8if78g</a><br/> View job at <a href='https://wandb.ai/kpierzynski/t5-large/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQ2NDI2Mw==/version_details/v1' target=\"_blank\">https://wandb.ai/kpierzynski/t5-large/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQ2NDI2Mw==/version_details/v1</a><br/>Synced 6 W&B file(s), 0 media file(s), 2 artifact file(s) and 3 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20240124_212147-pr8if78g/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "trainer.save_model(model_name + \"_model\")\n",
+    "\n",
+    "run.save(f\"{model_name}_model/*\")\n",
+    "wandb.finish()"
    ]
   }
  ],
