--- a/notebooks/encoder.ipynb
+++ b/notebooks/encoder.ipynb
@@ -29,17 +29,88 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.2"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_210716-3ssfefrr</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/roberta-base/runs/3ssfefrr' target=\"_blank\">efficient-voice-2</a></strong> to <a href='https://wandb.ai/kpierzynski/roberta-base' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/kpierzynski/roberta-base' target=\"_blank\">https://wandb.ai/kpierzynski/roberta-base</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/kpierzynski/roberta-base/runs/3ssfefrr' target=\"_blank\">https://wandb.ai/kpierzynski/roberta-base/runs/3ssfefrr</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Load libraries\n",
     "from transformers import Trainer, TrainingArguments, AutoTokenizer, AutoModelForSequenceClassification\n",
     "import torch\n",
     "from torch import nn\n",
+    "import wandb\n",
     "\n",
     "model_name = 'roberta-base'\n",
     "batch_size = 32\n",
     "epochs = 5\n",
-    "num_labels = 4"
+    "num_labels = 4\n",
+    "\n",
+    "run = wandb.init(project=model_name)"
    ]
   },
   {
@@ -154,7 +225,8 @@
     "    output_dir='./results',\n",
     "    num_train_epochs=epochs,\n",
     "    per_device_train_batch_size=batch_size,\n",
-    "    evaluation_strategy=\"epoch\"\n",
+    "    evaluation_strategy=\"epoch\",\n",
+    "    report_to=\"wandb\"\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
@@ -172,80 +244,13 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mkpierzynski\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.16.2"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/home/konrad/Desktop/nlp-dl-project/notebooks/wandb/run-20240124_022143-dw7oxmem</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem' target=\"_blank\">wild-totem-3</a></strong> to <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/kpierzynski/huggingface' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem' target=\"_blank\">https://wandb.ai/kpierzynski/huggingface/runs/dw7oxmem</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/html": [
        "\n",
        "    <div>\n",
        "      \n",
        "      <progress value='785' max='785' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [785/785 07:42, Epoch 5/5]\n",
+       "      [785/785 07:47, Epoch 5/5]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -260,32 +265,32 @@
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>No log</td>\n",
-       "      <td>1.349146</td>\n",
-       "      <td>0.636000</td>\n",
+       "      <td>1.344341</td>\n",
+       "      <td>0.696000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>No log</td>\n",
-       "      <td>1.240878</td>\n",
-       "      <td>0.855000</td>\n",
+       "      <td>1.213821</td>\n",
+       "      <td>0.852000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>No log</td>\n",
-       "      <td>0.746952</td>\n",
-       "      <td>0.882000</td>\n",
+       "      <td>0.667816</td>\n",
+       "      <td>0.883000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
-       "      <td>1.212400</td>\n",
-       "      <td>0.413322</td>\n",
-       "      <td>0.885000</td>\n",
+       "      <td>1.186000</td>\n",
+       "      <td>0.407810</td>\n",
+       "      <td>0.887000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
-       "      <td>1.212400</td>\n",
-       "      <td>0.388902</td>\n",
-       "      <td>0.888000</td>\n",
+       "      <td>1.186000</td>\n",
+       "      <td>0.388739</td>\n",
+       "      <td>0.886000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table><p>"
@@ -300,7 +305,7 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=785, training_loss=0.9423960886183818, metrics={'train_runtime': 466.5304, 'train_samples_per_second': 53.587, 'train_steps_per_second': 1.683, 'total_flos': 6600544051200000.0, 'train_loss': 0.9423960886183818, 'epoch': 5.0})"
+       "TrainOutput(global_step=785, training_loss=0.9218577779782047, metrics={'train_runtime': 468.137, 'train_samples_per_second': 53.403, 'train_steps_per_second': 1.677, 'total_flos': 6600544051200000.0, 'train_loss': 0.9218577779782047, 'epoch': 5.0})"
       ]
      },
      "execution_count": 10,
@@ -411,6 +416,81 @@
    "source": [
     "model.print_trainable_parameters()\n",
     "print(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Symlinked 4 files into the W&B run directory, call wandb.save again to sync new files.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='2.273 MB of 2.278 MB uploaded\\r'), FloatProgress(value=0.997869758865747, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
+       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
+       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
+       "    </style>\n",
+       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>▁▇███</td></tr><tr><td>eval/loss</td><td>█▇▃▁▁</td></tr><tr><td>eval/runtime</td><td>▅▁▆█▆</td></tr><tr><td>eval/samples_per_second</td><td>▄█▃▁▃</td></tr><tr><td>eval/steps_per_second</td><td>▄█▃▁▃</td></tr><tr><td>train/epoch</td><td>▁▃▅▅▆██</td></tr><tr><td>train/global_step</td><td>▁▃▄▅▆██</td></tr><tr><td>train/learning_rate</td><td>▁</td></tr><tr><td>train/loss</td><td>▁</td></tr><tr><td>train/total_flos</td><td>▁</td></tr><tr><td>train/train_loss</td><td>▁</td></tr><tr><td>train/train_runtime</td><td>▁</td></tr><tr><td>train/train_samples_per_second</td><td>▁</td></tr><tr><td>train/train_steps_per_second</td><td>▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>eval/accuracy</td><td>0.886</td></tr><tr><td>eval/loss</td><td>0.38874</td></tr><tr><td>eval/runtime</td><td>7.8145</td></tr><tr><td>eval/samples_per_second</td><td>127.967</td></tr><tr><td>eval/steps_per_second</td><td>15.996</td></tr><tr><td>train/epoch</td><td>5.0</td></tr><tr><td>train/global_step</td><td>785</td></tr><tr><td>train/learning_rate</td><td>2e-05</td></tr><tr><td>train/loss</td><td>1.186</td></tr><tr><td>train/total_flos</td><td>6600544051200000.0</td></tr><tr><td>train/train_loss</td><td>0.92186</td></tr><tr><td>train/train_runtime</td><td>468.137</td></tr><tr><td>train/train_samples_per_second</td><td>53.403</td></tr><tr><td>train/train_steps_per_second</td><td>1.677</td></tr></table><br/></div></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run <strong style=\"color:#cdcd00\">efficient-voice-2</strong> at: <a href='https://wandb.ai/kpierzynski/roberta-base/runs/3ssfefrr' target=\"_blank\">https://wandb.ai/kpierzynski/roberta-base/runs/3ssfefrr</a><br/> View job at <a href='https://wandb.ai/kpierzynski/roberta-base/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQ2MDg5Mw==/version_details/v1' target=\"_blank\">https://wandb.ai/kpierzynski/roberta-base/jobs/QXJ0aWZhY3RDb2xsZWN0aW9uOjEzMzQ2MDg5Mw==/version_details/v1</a><br/>Synced 6 W&B file(s), 0 media file(s), 2 artifact file(s) and 4 other file(s)"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Find logs at: <code>./wandb/run-20240124_210716-3ssfefrr/logs</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "trainer.save_model(model_name + \"_model\")\n",
+    "\n",
+    "run.save(f\"{model_name}_model/*\")\n",
+    "wandb.finish()"
    ]
   }
  ],
