prints example prompts to model

--- a/notebooks/prompting.ipynb
+++ b/notebooks/prompting.ipynb
@@ -64,7 +64,7 @@
     "tokenizer.pad_token_id = tokenizer.eos_token_id\n",
     "\n",
     "# Shuffle and pick subset from dataset\n",
-    "subset = dataset['train'].shuffle(seed=442333+424714).select(range(5000))"
+    "subset = dataset['test'].shuffle(seed=442333+424714)"
    ]
   },
   {
@@ -76,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "671294ab885f415b8e0ed2ce7c8bd8a3",
+       "model_id": "3b69aeffca09425788c131432cb0f4dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -110,92 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c1ff8e55-8c68-41ab-b978-abd069318fa1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'negative'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"I hate this film! Is this a positive or negative review?\"\n",
-    "ask(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "0e3eb4d8-411d-4634-a7f4-b7ee4336f845",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'no'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"I think she didn't send her homework! Will girl pass?\"\n",
-    "ask(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
-   "id": "28507f57-d14a-4ce7-9534-08fe90802b72",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'23 and 27'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text = \"\"\"\n",
-    "When patient had stroke, its code 22.\n",
-    "If patient had low red blood cells, it's code 27.\n",
-    "When patient had heart failure, it is code 23.\n",
-    "\n",
-    "Patient description: \"Man, 30 years old, exhibits signs of cardiac insufficiency, such as shortness of breath, fatigue, and leg swelling. Test results showed below normal count of erythrocytes. Additional assessment and medical history are necessary for a thorough diagnosis and tailored treatment approach.\"\n",
-    "Which multiple codes should be used for this description?\n",
-    "\"\"\"\n",
-    "ask(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "d38b57a4-dfb4-47bc-aca7-c7e772b8f9f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75b932fb31fe4793a6828010ea0f8415",
+       "model_id": "8932b6e5c4a749e18547c0a67a6409de",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/5000 [00:00<?, ?it/s]"
+       "  0%|          | 0/7600 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -205,7 +132,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 93.32%\n"
+      "Task for model:\n",
+      "You have 4 categories: World, Sports, Business, Sci/Tech. Use exactly those categories. Decide which category the following text belongs to: 'Trapeze Software Eases Services Delivery (Ziff Davis) Ziff Davis - Trapeze Networks this week will announce upgrades to its wireless LAN switch software.'.\n",
+      "Answer: Sci/Tech, expected answer: Sci/Tech\n",
+      "\n",
+      "Task for model:\n",
+      "You have 4 categories: World, Sports, Business, Sci/Tech. Use exactly those categories. Decide which category the following text belongs to: 'Update 4: Belo to Cut 250 Jobs, Mostly in Dallas Media owner Belo Corp. said Wednesday that it would cut 250 jobs, more than half of them at its flagship newspaper, The Dallas Morning News, and that an internal investigation into circulation overstatements '.\n",
+      "Answer: Business, expected answer: Business\n",
+      "\n",
+      "Task for model:\n",
+      "You have 4 categories: World, Sports, Business, Sci/Tech. Use exactly those categories. Decide which category the following text belongs to: 'China's Lenovo in talks with 'major IT firm' for acquisition (AFP) AFP - China's largest manufacturer of personal computers Lenovo Group said it is in negotiations with a major information technology company, believed to be US-based IBM.'.\n",
+      "Answer: Sci/Tech, expected answer: Sci/Tech\n",
+      "\n",
+      "Accuracy: 92.55263157894737%\n"
      ]
     }
    ],
@@ -225,6 +164,12 @@
     "    prompt = f\"{context}'{text}'.\"\n",
     "\n",
     "    answer = ask(prompt)\n",
+    "\n",
+    "    if total < 3:\n",
+    "        print(\"Task for model:\")\n",
+    "        print(prompt)\n",
+    "        print(f\"Answer: {answer}, expected answer: {categories[category]}\")\n",
+    "        print()\n",
     "\n",
     "    # model could respond with unknown string, but we trust\n",
     "    index = categories.index(answer)\n",
